--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli": "latest",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/firestore": "^21.12.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.0",
+    "@types/firebase": "^2.4.32",
     "expo": "~52.0.37",
     "expo-barcode-scanner": "^13.0.1",
     "expo-notifications": "^0.29.13",
@@ -25,6 +30,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.13.1",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
