--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,12 +13,17 @@
     "@react-native-community/cli": "latest",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.12.0",
+    "@react-native-firebase/auth": "^21.12.0",
     "@react-native-firebase/firestore": "^21.12.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/elements": "^2.2.6",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.0",
     "@types/firebase": "^2.4.32",
+    "@types/react-navigation": "^3.0.8",
+    "@types/redux-thunk": "^2.1.32",
     "expo": "~52.0.37",
     "expo-barcode-scanner": "^13.0.1",
     "expo-notifications": "^0.29.13",
